# drun

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
.github/workflows/: docker-hub.yml  release.yml
agent/: Cargo.toml
agent/src/: checks.rs  client.rs  main.rs  state_file.rs
ansible/: pyproject.toml
ansible/playbooks/: install_agent.yml  uninstall_agent.yml
ansible/playbooks/templates/: infrahub-agent.env.j2  infrahub-agent.service.j2
backend/: Cargo.toml
backend/migrations/: 20250404000000_init.sql  20250404120000_retries_summary.sql  20250405120000_roles_agents_meta.sql  20260405120000_scenarios.sql  20260406120000_agents_cpu_arch.sql
backend/src/: admin_api.rs  analytics.rs  auth.rs  config.rs  error.rs  export.rs  handlers.rs  machine_diff.rs  main.rs  models.rs  provisioning.rs  queue.rs  realtime.rs  roles.rs  session.rs  state.rs  streaming.rs  token.rs  topology.rs
backend/src/entity/: agents.rs  mod.rs  scenarios.rs  task_logs.rs  task_results.rs  tasks.rs  users.rs
backend/src/handlers/: agent_worker.rs  agents_admin.rs  auth.rs  metrics.rs  mod.rs  openapi.rs  scenarios.rs  tasks_http.rs
docker/: Caddyfile  Caddyfile.internal  backend.Dockerfile  deploy.env.example  frontend.Dockerfile
docker/nginx/: default.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Dashboard.tsx  Login.tsx  TaskDetail.tsx  api.ts  index.css  main.tsx  queryClient.ts  queryKeys.ts
frontend/src/components/: TaskResultView.tsx
frontend/src/components/layout/: AppShell.tsx  PlatformLayout.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  sonner.tsx  table.tsx  tabs.tsx  textarea.tsx
frontend/src/features/agents/: AgentBulkUploadCard.tsx
frontend/src/features/dashboard/: AgentsTableCard.tsx  MetricsSection.tsx  TaskComposerCard.tsx  TasksTableCard.tsx  TemplatesCard.tsx
frontend/src/features/insights/: AnalyticsPanel.tsx  MachineDiffPanel.tsx  OpsPanel.tsx  ProvisionAgentDialog.tsx  TopologyPanel.tsx  UninstallAgentDialog.tsx  topologyFlow.css  topologyUtils.ts
frontend/src/features/overview/: AgentStatusGrid.tsx
frontend/src/features/scenarios/: ScenarioStepEditor.tsx  dsl.ts
frontend/src/features/taskComposer/: presets.ts  scenarios.ts
frontend/src/hooks/: useLiveDashboard.ts
frontend/src/lib/: defaultInfrahubApiBase.ts  guards.ts
frontend/src/pages/: AdminPage.tsx  AgentsPage.tsx  AnalyticsPage.tsx  OverviewPage.tsx  RunsPage.tsx  ScenariosPage.tsx  TopologyPage.tsx
frontend/src/stores/: taskComposerStore.ts
frontend/src/utils/: format.ts
githooks/: prepare-commit-msg
