[package]
name = "infrahub-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Явные фичи (в т.ч. `net` для lookup_host / TcpStream) — так RA/IDE стабильнее видит зависимости
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
sysinfo = { version = "0.32", features = ["disk", "network", "system", "multithread"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
hostname = "0.4"
if-addrs = "0.13"
anyhow = "1"
dirs = "5"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2"
