[package]
name = "infrahub-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
futures = "0.3"
async-stream = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
dotenvy = "0.15"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
csv = "1.3"
printpdf = "0.7"
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid", "with-json"] }
tempfile = "3"
serde_yaml = "0.9"
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
utoipa = {version = "5.4.0", features = ["axum_extras", "yaml"]}
utoipa-axum = "0.2.0"
utoipa-swagger-ui = {version = "9.0.2", features = ["axum"]}
